added unit tests for crud methods in PeopleService